--- a/allcontent.html
+++ b/allcontent.html
@@ -18,15 +18,15 @@
 
       /* ✅ Logo style */
       .logo {
-        width: 120px; /* Increased size */
+        width: 120px;
         height: auto;
         transition: transform 0.3s ease, filter 0.3s ease;
         cursor: pointer;
       }
 
       .logo:hover {
-        transform: scale(1.1); /* zoom effect */
-        filter: brightness(1.2); /* makes logo a bit brighter */
+        transform: scale(1.1);
+        filter: brightness(1.2);
       }
 
       footer {
@@ -55,34 +55,34 @@
       /* Gradients for each tab */
       .g1 {
         background: linear-gradient(135deg, #6366f1, #8b5cf6);
-      } /* Purple */
+      }
       .g2 {
         background: linear-gradient(135deg, #f59e0b, #f97316);
-      } /* Orange */
+      }
       .g3 {
         background: linear-gradient(135deg, #ec4899, #db2777);
-      } /* Pink */
+      }
       .g4 {
         background: linear-gradient(135deg, #10b981, #059669);
-      } /* Green */
+      }
       .g5 {
         background: linear-gradient(135deg, #3b82f6, #2563eb);
-      } /* Blue */
+      }
       .g6 {
         background: linear-gradient(135deg, #f43f5e, #e11d48);
-      } /* Red */
+      }
       .g7 {
         background: linear-gradient(135deg, #14b8a6, #0d9488);
-      } /* Teal */
+      }
       .g8 {
         background: linear-gradient(135deg, #facc15, #eab308);
-      } /* Yellow */
+      }
       .g9 {
         background: linear-gradient(135deg, #8b5cf6, #7c3aed);
-      } /* Indigo */
+      }
       .g10 {
         background: linear-gradient(135deg, #a855f7, #9333ea);
-      } /* Violet */
+      }
     </style>
   </head>
   <body class="text-gray-200">
@@ -99,6 +99,7 @@
 
       <main class="container mx-auto p-6 flex-grow">
         <div class="flex flex-wrap justify-center gap-6">
+          <!-- Cards -->
           <div
             class="icon-card flex flex-col justify-center items-center text-center space-y-3"
             onclick="window.location.href='studentdetails.html'"
@@ -166,10 +167,8 @@
               >
                 <rect x="3" y="4" width="18" height="16" rx="2" ry="2"></rect>
                 <line x1="3" y1="10" x2="21" y2="10"></line>
-
                 <line x1="8" y1="2" x2="8" y2="6"></line>
                 <line x1="16" y1="2" x2="16" y2="6"></line>
-
                 <path d="M9 14l2 2 4-4"></path>
               </svg>
             </div>
@@ -227,9 +226,7 @@
                   stroke-linecap="round"
                   stroke-linejoin="round"
                 ></rect>
-
                 <line x1="3" y1="10" x2="21" y2="10"></line>
-
                 <line x1="8" y1="3" x2="8" y2="7"></line>
                 <line x1="16" y1="3" x2="16" y2="7"></line>
               </svg>
@@ -283,11 +280,9 @@
                   stroke-linecap="round"
                   stroke-linejoin="round"
                 ></rect>
-
                 <line x1="3" y1="8" x2="21" y2="8"></line>
                 <line x1="8" y1="2" x2="8" y2="6"></line>
                 <line x1="16" y1="2" x2="16" y2="6"></line>
-
                 <rect
                   x="9"
                   y="12"
@@ -315,11 +310,9 @@
                 stroke-width="2"
               >
                 <rect x="4" y="3" width="14" height="18" rx="2" ry="2"></rect>
-
                 <line x1="7" y1="7" x2="15" y2="7"></line>
                 <line x1="7" y1="11" x2="15" y2="11"></line>
                 <line x1="7" y1="15" x2="11" y2="15"></line>
-
                 <circle cx="18" cy="8" r="2"></circle>
                 <path d="M17 10l-1 3m3-3l1 3"></path>
               </svg>
@@ -342,7 +335,6 @@
               >
                 <rect x="3" y="6" width="18" height="12" rx="2" ry="2"></rect>
                 <line x1="3" y1="10" x2="21" y2="10"></line>
-
                 <path d="M9 14h6m-3-4v8"></path>
               </svg>
             </div>
@@ -364,10 +356,8 @@
               >
                 <circle cx="8" cy="8" r="3"></circle>
                 <path d="M5 21v-2a4 4 0 0 1 6-3.5"></path>
-
                 <circle cx="16" cy="8" r="3"></circle>
                 <path d="M13 21v-2a4 4 0 0 1 6-3.5"></path>
-
                 <path d="M16 14l2 2 4-4"></path>
               </svg>
             </div>
@@ -392,7 +382,6 @@
                   stroke-linejoin="round"
                   d="M12 3a6 6 0 00-6 6v2a4 4 0 00-1 3l1 4h4l1 3h4v-3a5 5 0 003-5V9a6 6 0 00-6-6z"
                 ></path>
-
                 <path
                   stroke-linecap="round"
                   stroke-linejoin="round"
@@ -402,6 +391,16 @@
             </div>
             <span class="text-lg font-medium">Mental Health Support</span>
           </div>
+        </div>
+
+        <!-- ✅ Save Button -->
+        <div class="flex justify-center mt-10">
+          <button
+            onclick="window.location.href='mainofficialdetails.html'"
+            class="px-8 py-3 bg-gradient-to-r from-indigo-500 to-purple-600 text-white font-semibold rounded-xl shadow-md hover:scale-105 hover:shadow-lg transition duration-300"
+          >
+            Save
+          </button>
         </div>
       </main>
 
