--- a/allcontent.html
+++ b/allcontent.html
@@ -154,7 +154,7 @@
 
           <div
             class="icon-card flex flex-col justify-center items-center text-center space-y-3"
-            onclick="window.location.href='student-leave.html'"
+            onclick="window.location.href='studentleaveapprove.html'"
           >
             <div class="icon-gradient g2">
               <svg
@@ -177,7 +177,7 @@
 
           <div
             class="icon-card flex flex-col justify-center items-center text-center space-y-3"
-            onclick="window.location.href='notes&pyqs.html'"
+            onclick="window.location.href='notes-pyqsupload.html'"
           >
             <div class="icon-gradient g4">
               <svg
