--- a/allcontent.html
+++ b/allcontent.html
@@ -297,6 +297,58 @@
           </div>
 
           <div
+  class="icon-card flex flex-col justify-center items-center text-center space-y-3"
+  onclick="window.location.href='hostel.html'"
+>
+  <div class="icon-gradient g3">
+    <!-- Hostel Icon (Improved Bed) -->
+    <svg
+      class="w-10 h-10 text-white"
+      xmlns="http://www.w3.org/2000/svg"
+      fill="none"
+      viewBox="0 0 24 24"
+      stroke="currentColor"
+      stroke-width="2"
+    >
+      <!-- Bed Base -->
+      <path d="M3 12h18v7H3z" />
+      <!-- Mattress -->
+      <rect x="3" y="10" width="12" height="2" rx="1" ry="1"></rect>
+      <!-- Pillow -->
+      <rect x="15" y="8" width="5" height="4" rx="1" ry="1"></rect>
+      <!-- Legs -->
+      <line x1="3" y1="19" x2="3" y2="21"></line>
+      <line x1="21" y1="19" x2="21" y2="21"></line>
+    </svg>
+  </div>
+  <span class="text-lg font-medium">Hostel</span>
+</div>
+
+
+
+          <div
+  class="icon-card flex flex-col justify-center items-center text-center space-y-3"
+  onclick="window.location.href='feedback.html'"
+>
+  <div class="icon-gradient g9">
+    <!-- Star Icon -->
+    <svg
+      class="w-10 h-10 text-white"
+      xmlns="http://www.w3.org/2000/svg"
+      fill="currentColor"
+      viewBox="0 0 24 24"
+    >
+      <path
+        d="M12 .587l3.668 7.431L24 9.748l-6 5.85L19.335 24 12 19.897 4.665 24 6 15.598 0 9.748l8.332-1.73z"
+      />
+    </svg>
+  </div>
+  <span class="text-lg font-medium">Feedback</span>
+</div>
+
+
+
+          <div
             class="icon-card flex flex-col justify-center items-center text-center space-y-3"
             onclick="window.location.href='examresults.html'"
           >
@@ -393,15 +445,6 @@
           </div>
         </div>
 
-        <!-- ✅ Save Button -->
-        <div class="flex justify-center mt-10">
-          <button
-            onclick="window.location.href='mainofficialdetails.html'"
-            class="px-8 py-3 bg-gradient-to-r from-indigo-500 to-purple-600 text-white font-semibold rounded-xl shadow-md hover:scale-105 hover:shadow-lg transition duration-300"
-          >
-            Save
-          </button>
-        </div>
       </main>
 
       <footer class="py-4 mt-6 border-t border-gray-700">
