3rd update allcontent.html

--- a/allcontent.html
+++ b/allcontent.html
@@ -124,7 +124,7 @@
 
           <div
             class="icon-card flex flex-col justify-center items-center text-center space-y-3"
-            onclick="window.location.href='bulletinboard.html'"
+            onclick="window.location.href='adminbulletin.html'"
           >
             <div class="icon-gradient g2">
               <svg
@@ -205,7 +205,7 @@
 
           <div
             class="icon-card flex flex-col justify-center items-center text-center space-y-3"
-            onclick="window.location.href='timetable.html'"
+            onclick="window.location.href='admintimetable.html'"
           >
             <div class="icon-gradient g5">
               <svg
