4th update allcontent.html

--- a/allcontent.html
+++ b/allcontent.html
@@ -236,7 +236,7 @@
 
           <div
             class="icon-card flex flex-col justify-center items-center text-center space-y-3"
-            onclick="window.location.href='library.html'"
+            onclick="window.location.href='newlibrary.html'"
           >
             <div class="icon-gradient g10">
               <svg
@@ -259,7 +259,7 @@
 
           <div
             class="icon-card flex flex-col justify-center items-center text-center space-y-3"
-            onclick="window.location.href='academiccalendar.html'"
+            onclick="window.location.href='newacademiccalender.html'"
           >
             <div class="icon-gradient g6">
               <svg
@@ -298,7 +298,7 @@
 
           <div
   class="icon-card flex flex-col justify-center items-center text-center space-y-3"
-  onclick="window.location.href='hostel.html'"
+  onclick="window.location.href='newhostel.html'"
 >
   <div class="icon-gradient g3">
     <!-- Hostel Icon (Improved Bed) -->
@@ -328,7 +328,7 @@
 
           <div
   class="icon-card flex flex-col justify-center items-center text-center space-y-3"
-  onclick="window.location.href='feedback.html'"
+  onclick="window.location.href='feedbackpage.html'"
 >
   <div class="icon-gradient g9">
     <!-- Star Icon -->
@@ -374,7 +374,7 @@
 
           <div
             class="icon-card flex flex-col justify-center items-center text-center space-y-3"
-            onclick="window.location.href='feepaymemnt.html'"
+            onclick="window.location.href='newfees.html'"
           >
             <div class="icon-gradient g8">
               <svg
