--- a/allcontent.html
+++ b/allcontent.html
@@ -395,7 +395,7 @@
 
           <div
             class="icon-card flex flex-col justify-center items-center text-center space-y-3"
-            onclick="window.location.href='attendance.html'"
+            onclick="window.location.href='attendence.html'"
           >
             <div class="icon-gradient g9">
               <svg
